Fix: aligned forgot password text with box

--- a/static/css/login_styles.css
+++ b/static/css/login_styles.css
@@ -12,8 +12,6 @@ section {
 
 form {
     text-align: center;
-    display: flex;
-    flex-direction: column;
     align-items: center;
 }
 
